codice scritto, da testare e fixare
