# doc/api.yaml
@@ -107,7 +107,7 @@ paths:
           description: Invalid request
         '404':
           description: User not found
-  /conversations/{conversation_id}:
+  /conversations/get-details/{conversation_id}:
     get:
       tags:
         - conversations
@@ -128,6 +128,7 @@ paths:
                 $ref: '#/components/schemas/Conversation'
         '404':
           description: Conversation not found
+  /conversations/delete/{conversation_id}:
     delete:
       tags:
         - conversations
@@ -144,7 +145,7 @@ paths:
           description: Conversation not found
         '403':
           description: Forbidden
-  /conversations/{conversation_id}/messages:
+  /conversations/messages/{conversation_id}:
     get:
       tags:
         - messages
@@ -175,7 +176,7 @@ paths:
           description: Conversation not found
         '500':
           description: Internal server error
-  /conversations/{conversation_id}/send-message:
+  /conversations/send-message/{conversation_id}:
     post:
       tags:
         - messages
@@ -213,7 +214,7 @@ paths:
           description: Invalid request
         '404':
           description: Conversation not found 
-  /conversations/{conversation_id}/messages/{message_id}:
+  /conversations/delete-message/{conversation_id}/message/{message_id}:
     delete:
       tags:
         - messages
@@ -251,7 +252,7 @@ paths:
       responses:
         '201':
           description: Message forwarded successfully
-  /conversations/{conversation_id}/messages/{message_id}/reaction:
+  /conversations/react/{conversation_id}/messages/{message_id}:
     post:
       tags:
         - messages
@@ -272,6 +273,7 @@ paths:
       responses:
         '201':
           description: Comment added successfully
+  /conversations/delete-react/{conversation_id}/messages/{message_id}:
     delete:
       tags:
         - messages
@@ -314,7 +316,7 @@ paths:
                     example: "1"
         '400':
           description: Invalid request
-  /conversations/group/{group_id}/change-name:
+  /conversations/group/change-name/{group_id}:
     patch:
       tags:
         - groups
@@ -340,7 +342,7 @@ paths:
           description: Group name updated successfully
         '404':
           description: Group not found
-  /conversations/group/{group_id}/add:
+  /conversations/group/add/{group_id}:
     post:
       parameters:
       - $ref: '#/components/parameters/group_id'
@@ -358,14 +360,14 @@ paths:
             schema:
               type: object
               properties:
-                user_name:
+                username:
                   type: string
                   example: "hanni"
       responses:
         '200':
           description: User added to group
-  /conversations/group/{group_id}/leave:
-    post:
+  /conversations/group/leave/{group_id}:
+    delete:
       tags:
         - groups
       summary: Leave a group
@@ -379,7 +381,7 @@ paths:
           description: User left the group successfully
         '404':
           description: Group not found
-  /conversations/group/{group_id}/photo:
+  /conversations/group/update-photo/{group_id}:
     patch:
       tags:
         - groups
@@ -405,6 +407,36 @@ paths:
           description: Group photo updated successfully
         '404':
           description: Group not found
+  /conversations/group/get-photo/{conversation_id}:
+    get:
+      tags:
+        - groups
+      summary: Get the photo of a conversation
+      description: >
+        Retrieves the photo of a conversation by its ID. The photo is returned as a binary image file.
+      operationId: getConversationPhoto
+      parameters:
+        - $ref: '#/components/parameters/conversation_id'
+      responses:
+        '200':
+          description: Photo retrieved successfully
+          content:
+            image/png:
+              schema:
+                type: string
+                format: binary
+            image/jpeg:
+              schema:
+                type: string
+                format: binary
+        '404':
+          description: Conversation or photo not found
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal server error
+      security:
+        - bearerAuth: []
   /user/modify-username:
     patch:
       tags: 
@@ -451,6 +483,39 @@ paths:
           description: Profile photo updated successfully
         '400':
           description: Invalid photo
+  /user/get-photo/{user_id}:
+    get:
+      tags:
+        - users
+      summary: Get the photo of a user
+      description: >
+        Retrieves the photo of a user by their ID. If the user does not have a photo, a default photo is returned.
+      operationId: getUserPhoto
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          description: The ID of the user whose photo is to be retrieved.
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Photo retrieved successfully
+          content:
+            image/png:
+              schema:
+                type: string
+                format: binary
+            image/jpeg:
+              schema:
+                type: string
+                format: binary
+        '404':
+          description: User not found or photo not set
+        '500':
+          description: Internal server error
+      security:
+        - bearerAuth: []
 
                 
     
